src/index.sass
@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900&display=swap')

body
  margin: 0
  font-family: 'Nunito', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
  -webkit-font-smoothing: antialiased
  -moz-osx-font-smoothing: grayscale

code
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace

.divider
  border: none
  height: 1px
  background: linear-gradient(90deg, rgba(217,217,217,0.2) 0%, rgba(6, 5, 97,0.3) 25%, rgba(6, 5, 97,0.75) 50%,rgba(6, 5, 97,0.3) 75%, rgba(217,217,217,0.2) 100%)
  width: 100%!important

:root
  scroll-behavior: smooth

